# snakemake-workflows

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
annotator/: analysis profiles.yaml  app.py  formbuilder.py  initialize_tracker.py
das/: README.md  environment.yaml  wrapper.py
deepposekit/: environment.yaml  meta.yaml  wrapper.py
deepposekit/models/: chainingmic_densenet-bg-inverted_best_model.csv
deepss/: environment.yaml  meta.yaml  wrapper.py
deepss/models/vibrations/: 20191108_235948_arch.yaml  20191108_235948_params.yaml
ethotracker/: environment.yaml  meta.yaml  wrapper.py
merge_splits/: README.md  environment.yaml
profiles/rosa/: config.yaml
scripts/: bsubmit_block.sh  fab_commands.py  main.smk  slurm-submit.py
sleap/: README.md  environment.yaml  meta.yaml  wrapper.py
sleap/models/backlight/backlight_centered_instance200607_203606/: initial_config.json  labels_gt.val.slp  training_config.json  training_log.csv
sleap/models/backlight/backlight_centroid200607_203606/: initial_config.json  labels_gt.val.slp  training_config.json  training_log.csv
sleap/models/backlight_first/topdown200525_165041.centroid.10000/: training_config.json
sleap/models/topdown200525_222611.centered_instance.10000/: training_config.json
split_videos/: README.md  meta.yaml  wrapper.py
src/fab_commands/: __init__.py  commands.py  dashboard_task.py  monitor.py  monitor_dashboard.py  monitor_task.py  project.py  submission.py  tasks.py  transfer.py
track/: environment.yaml  meta.yaml
wrappers/das/: README.md  meta.yaml  wrapper.py
wrappers/merge_splits/: README.md  meta.yaml  wrapper.py
wrappers/pb_speed/: README.md  environment.yaml  meta.yaml  ncb.mplstyle  scratch.ipynb  scratch_clean.ipynb  tools.py  wrapper.py
wrappers/pb_tune/: scratch.ipynb
wrappers/sleap/: README.md  environment.yaml  meta.yaml  wrapper.py
wrappers/split_videos/: README.md  environment.yaml  wrapper.py
