[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fab-commands"
version = "0.1.0"
description = "Shared Fabric commands for the snakemake-workflows repo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["snakemake", "fabric", "rich", "pyyaml", "uv", "snakemake-executor-plugin-slurm", "etho_annotator@git+https://github.com/janclemenslab/etho_annotator"]

[project.urls]
Repository = "https://github.com/janclemenslab/snakemake-workflows"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
