[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fab-commands"
version = "0.3.0"
description = "Shared Fabric commands for the snakemake-workflows repo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "snakemake",
    "fabric",
    "python-fasthtml",
    "monsterui",
    "rich",
    "pyyaml",
    "uv",
    "numpy",
    "h5py",
    "zarr",
    "xarray-behave",
    "pandas",
    "snakemake-executor-plugin-slurm",
    "etho_annotator@git+https://github.com/janclemenslab/etho_annotator",
]

[project.urls]
Repository = "https://github.com/janclemenslab/snakemake-workflows"

[project.scripts]
transfer = "fab_commands.transfer:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
